# AutoBCI

./: .gitignore  .venv.external-link  AGENTS.md  README.md  data  fix_layout.py  package-lock.json  pyproject.toml  requirements.txt
configs/: session_example.yaml  session_walk_20240701_01.yaml
dashboard/: index.html
docs/: 2026-04-11_autoresearch_product_mvp_spec.md  2026-04-12_autobci_agent_thinking_control_plane_spec.md  2026-04-12_autobci_control_plane_current_state.md  2026-04-12_dashboard_mission_control_discussion.md  2026-04-13_autoresearch_benchmark_proposal.md  2026-04-13_benchmark_carnese_final_synthesis.md  2026-04-13_benchmark_carnese_proposal.md  2026-04-13_benchmark_carnese_unified.md  2026-04-13_gait_phase_benchmark_from_zero.md  2026-04-13_zhenfund_token_grant_draft.md  CONSTITUTION.md  CONSTITUTION_BENCHMARK_GAIT_PHASE.md  autoresearch_deidentified_framework.md  hermes_autobci_control_plane.md  步态脑电二分类_数据切分与测试方案.md
memory/: 2026-04-05_joints_autoresearch_plan_eval.md  2026-04-05_prediction_segment_comparison.md  2026-04-05_status.md  BCI_AutoResearch_方法路线与文献综述_2026-04-05.md  BCI_AutoResearch_近期方法综述与执行路线_2026-04-05.md  current_overview.md  current_strategy.md  dashboard_redesign_2026_04_12.md  harness_dev_log_2026_04.md  hermes_control_plane.md  hermes_research_tree.md  walk_20km_01_kinematics_analysis.md  步态划分说明.docx
scripts/: analyze_channel_halves.py  backfill_autoresearch_status.py  benchmark_framework_scheduling.py  build_collab_gait_phase_package.py  build_dataset_caches.py  build_gait_phase_eeg_competition_package.py  convert_session.py  (+57 more)
(+186 files in other folders)
